create profile and authentification pages and fixe some problems and update the nav and homa page

--- a/src/app/components/femme-actions/femme-actions.component.html
+++ b/src/app/components/femme-actions/femme-actions.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="col-md-4 px-1">
-        <div (click)="navigateTo('track')" class="cp action col-md-12 w-100 h-100 p-3 d-flex align-items-center justify-content-center Profile">
+        <div (click)="navigateTo('profil')" class="cp action col-md-12 w-100 h-100 p-3 d-flex align-items-center justify-content-center Profile">
             <h5>{{"Profile"|translate}}</h5>
         </div>
     </div>
