--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
               <a class="cp d-flex align-items-end gap-2 " (click)="navigateTo('home')">
                 <img src="../../../assets/images/logologologo.png" alt="" height="50" class="p-0 m-0">
                 <!-- <img src="../../../assets/images/logotest.png" alt="" height="40" class="p-0 m-0"> -->
-                <h4 style="color: #fff6f6;">Pain Care</h4>
+                <h4 style="color: #FF8B9E;" class="fw-600 ">Pain Care</h4>
               </a>
             </div>
       
@@ -20,7 +20,7 @@
                   <a class="px-3 fc-w cp" [class.active]="isActive('dashboard')" routerLinkActive="active" *ngIf="navItem.label == 'Logout' && isAuthenticated" (click)="navigateTo('dashboard')">{{"DASHBOARD" | translate}}</a>
 
                   <!-- Conditionally render a button for 'Logout' -->
-                  <button class="btn-login px-2 py-1 bg-danger fc-w rounded-2" *ngIf="navItem.label == 'Logout'" (click)="logout()">{{"LOGOUT"|translate}}</button>
+                  <button class="btn-logout px-2 py-1 rounded-2" *ngIf="navItem.label == 'Logout'" (click)="confirmLogout()">{{"LOGOUT"|translate}}</button>
 
                   <!-- Conditionally render a navigation link for other items -->
                   <a class="cp" *ngIf="navItem.label != 'Login' && navItem.label != 'Logout'" [class.active]="isActive(navItem.link)" routerLink="home" (click)="navigateTo(navItem.link)">
@@ -32,11 +32,11 @@
 
               <div class="language-selector d-flex gap-2">
                 <select class="fc-w language" id="language" [(ngModel)]="selectedLanguage" (change)="onLanguageChange($event)">
-                  <option value="en">
-                    <span class="mx-2">EN</span>
+                  <option value="en" class="p-0 m-0">
+                    EN
                   </option>
-                  <option value="fr">FR</option>
-                  <option value="ar">العربية</option>
+                  <option value="fr" class="p-0 m-0">FR</option>
+                  <option value="ar" class="p-0 m-0">العربية</option>
                 </select>
                 <div [ngClass]="['flag', 'flag-' + selectedLanguage]"></div>
               </div>
