--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<div>
     <div class="hero p-0 m-0 d-flex flex-column align-items-center">
-        <app-header></app-header>
         <div class="blue-overlay"></div>
         <div class="row hero-content h-100 container d-flex align-items-center justify-content-center w-100 p-0 m-0">
             <div class="col-md-6 h-100">
@@ -18,40 +10,8 @@
             </div>
         </div>
     </div>
-    <div class="hero-bottom w-100 my-5">
-        <div class="w-100 d-flex flex-column align-items-center">
-            <h5 class="title-5 p-0 m-0">Discover</h5>
-            <p class="description-5 p-0 m-0">Our Services</p>
-        </div>
 
-        <div class="list-articles w-100 container d-flex justify-content-center my-5">
-            <div class="row w-75 d-flex">
-                <div class="col-md-4 p-1">
-                    <div class="article-card a1">
-                        <img src="../../../assets/images/symptom.png" alt="" width="40%">
-                        <h2 class="article-title mt-3">Diagnostic test</h2>
-                        <p class="article-description">"Discover your potential endometriosis diagnostic"</p>
-                    </div>
-                </div>
-                <div class="col-md-4 p-1">
-                    <div class="article-card a2">
-                        <img src="../../../assets/images/books.png" alt="" width="40%">
-                        <h2 class="article-title mt-3">Endo informations</h2>
-                        <p class="article-description">"Stay informed about endometriosis"</p>
-                    </div>
-                </div>
-                <div class="col-md-4 p-1">
-                    <div class="article-card a3">
-                        <img src="../../../assets/images/diagram.png" alt="" width="40%">
-                        <h2 class="article-title mt-3">Pain evolution</h2>
-                        <p class="article-description">"Explore your pain journey"</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="about-us-section w-100 mb-5 p-5 about">
+    <!-- <div class="about-us-section w-100 mb-5 p-5 about">
         <div class="container">
             <div class="row px-5">
                 <div class="col-md-4">
@@ -65,22 +25,67 @@
                 </div>
             </div>
         </div>
+    </div> -->
+
+    <div class="container pt-4 mt-5">
+        <div class="row">
+            <div class="col-md-4">
+                <h3 class="p-5">
+                    Experience a Better Quality of Life Pain-Free
+                </h3>
+            </div>
+            <div class="col-md-8 py-5">
+                <p>
+                    We believe chronic pain shouldn’t hold you back from living life to the fullest.
+                </p>
+                <p>
+                    Our goal is to empower you to reach your personal potential by breaking down the barriers of pain. We’re passionate about changing the philosophy of pain management by increasing access to innovative and integrated healthcare solutions and providing the highest quality of care possible. As your trusted advisors, we’re committed to working with you to create a personalized treatment plan that addresses your unique needs and helps you achieve your goals. Let us help you break free from pain and start living your best life.
+                </p>
+            </div>
+        </div>
     </div>
 
 
-    <footer class="footer h-bg-primary text-light py-3 w-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p class="footer-text m-0">© 2024 Pain Care</p>
+    <div class="hero-bottom w-100 my-5">
+        <div class="w-100 d-flex align-items-center justify-content-center gap-2 services-header py-2">
+            <h5 class="title-5 p-0 m-0">Discover</h5>
+            <p class="description-5 p-0 m-0">Our Services</p>
+        </div>
+
+        <div class="list-services px-5 w-100 container d-flex flex-column align-items-start my-5 gap-5">
+            <div class="row w-100 p-4">
+                <div class="col-md-2 p-1">
+                    <div class="w-100 d-flex flex-column align-items-start justify-content-center">
+                        <img src="../../../assets/images/analytics.png" alt="" width="80%">
+                    </div>
                 </div>
-                <div class="col-md-6 text-end">
-                    <span class="footer-link">Privacy Policy</span>
-                    <span class="mx-2">|</span>
-                    <span class="footer-link">Terms of Service</span>
+                <div class="col-md-8">
+                    <h3 class="article-title mt-3">Diagnostic test</h3>
+                    <p class="article-description">"Discover your potential endometriosis diagnostic"</p>
+                </div>
+            </div>
+            <div class="row w-100 service p-4">
+                <div class="col-md-2 p-1">
+                    <div class="w-100 d-flex flex-column align-items-start justify-content-center">
+                        <img src="../../../assets/images/informative.png" alt="" width="80%">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <h3 class="article-title mt-3">Endo informations</h3>
+                    <p class="article-description">"Stay informed about endometriosis"</p>
+                </div>
+            </div>
+            <div class="row w-100 service p-4">
+                <div class="col-md-2 p-1">
+                    <div class="w-100 d-flex flex-column align-items-start justify-content-center">
+                        <img src="../../../assets/images/progress-chart.png" alt="" width="80%">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <h3 class="article-title mt-3">Pain evolution</h3>
+                    <p class="article-description">"Explore your pain journey"</p>
                 </div>
             </div>
         </div>
-    </footer>
-</body>
-</html>
+    </div>
+</div> 
