--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,9 +1,13 @@
 /* app.component.scss */
+
+
+
 header {
     /* background-color: rgb(242,232,221); */
     width: 100vw;
     position: relative;
     z-index: 1000;
+    box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.5);
   }
   
   .navbar {
@@ -11,11 +15,11 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 15px;
-    color: white;
+    color: black;
   
     .brand {
       a {
-        color: white;
+        color: black;
         text-decoration: none;
         font-size: 1.5em;
       }
@@ -26,17 +30,17 @@ header {
       height: 100%;
     }
     .pc-links a.active::after{
-        color: #ffffff !important;
+        color: black !important;
         content: '';
         position: absolute;
-        bottom: -1.9rem;
+        bottom: -2rem;
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
         /* Adjust the width of the line */
         height: 4px;
         /* Adjust the height of the line */
-        background-color: white;
+        background-color: #FF8B9E;
         /* Line color */
     }
   
@@ -66,8 +70,13 @@ header {
           margin-right: 15px;
   
           a {
-            color: white;
+            color: rgb(91, 90, 90);
             text-decoration: none;
+            font-weight: 600;
+            font-size: 16px !important;
+            font-family: Lato, sans-serif ;
+            text-transform: uppercase;
+            margin-right: 30px;
           }
         }
       }
@@ -92,7 +101,7 @@ header {
           padding: 15px;
   
           a {
-            color: white;
+            color: black;
             text-decoration: none;
           }
         }
@@ -100,8 +109,14 @@ header {
     }
 
     .btn-login{
-      /* background-color: black; */
+      background-color: #FF8B9E;
+      /* color: #ffffff; */
+      font-weight: bold;
+      text-transform: uppercase;
       border: 0;
+      padding-left: 30px !important;
+      padding-right: 30px !important;
+      color: #ffffff;
     }
   
     @media (max-width: 768px) {
@@ -135,7 +150,14 @@ header {
   
 
   .language{
-    background-color: rgb(128, 191, 218);
+    /* background-color: rgb(226, 138, 138); */
+    color: black;
+    display: flex;
+    justify-content: end;
+    min-width: 50px;
+    gap: 0px;
+    margin: 0px;
+    padding: 2px;
   }
 
   .language-selector {
@@ -172,20 +194,20 @@ header {
     line-height: inherit;
     outline: none;
     /* width: 100%; */
-  /* min-width: 15ch;
-  max-width: 30ch; */
-  border: 1px solid white;
-  border-radius: 0.25em;
-  padding: 0.1em 0.5em;
-  font-size: 1rem;
-  cursor: pointer;
-  line-height: 1.1;
-  background-color: transparent;
-  /* background-image: linear-gradient(to top, #f9f9f9, #fff 33%); */
-  display: grid;
-  grid-template-areas: "select";
+    /* min-width: 15ch;
+    max-width: 30ch; */
+    border: 1px solid white;
+    border-radius: 0.25em;
+    padding: 0.1em 0.5em;
+    font-size: 1rem;
+    cursor: pointer;
+    line-height: 1.1;
+    background-color: transparent;
+    /* background-image: linear-gradient(to top, #f9f9f9, #fff 33%); */
+    display: grid;
+    grid-template-areas: "select";
 
-  align-items: center;
+    align-items: center;
   }
 
   select::-ms-expand {
@@ -212,6 +234,11 @@ select,
   grid-area: select;
 }
 
+.btn-logout{
+  color: red;
+  background-color: #ffffff;
+  border: 0;
+}
 
 
   
