--- a/src/app/pages/home/components/left-landing/left-landing.component.html
+++ b/src/app/pages/home/components/left-landing/left-landing.component.html
@@ -1,7 +1,10 @@
 <div class="quote container col-md-6 h-h-400 w-100 d-flex flex-column gap-3 align-items-center justify-content-center">
-    <div>
-        {{ 'HomeQuote' | translate}}
-        <span class="in-quote">{{ 'HomeQuoteReste' | translate}}</span>
+    <div class="w-100 d-flex flex-column align-items-start">
+        <h3>
+            {{ 'HomeQuote' | translate}}
+            <br/>
+            <span class="in-quote">{{ 'HomeQuoteReste' | translate}}</span>
+        </h3>
     </div>
     <div class="w-100 d-flex justify-content-start">
         <button
