--- a/src/app/pages/home/components/right-landing/right-landing.component.html
+++ b/src/app/pages/home/components/right-landing/right-landing.component.html
@@ -1,3 +1,3 @@
-<div class="container col-md-6 w-100 h-100 d-flex flex-column align-items-center justify-content-end">
-    <img src="../../../../../assets/images/nurse1.png" alt="nurse" class="right-image m-0 p-0">
+<div class="container col-md-6 w-100 h-100 d-flex flex-column align-items-center justify-content-center">
+    <img src="../../../../../assets/images/back3.PNG" alt="nurse" class="right-image m-0 p-4">
 </div>
