--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,10 @@
+.nav{
+    background-color: #ffffff !important;
+}
+
 .hero{
-    background-image: url('../../../assets/images/back2.jpg');
+    /* background-image: url('../../../assets/images/endo4.jpg'); */
+    background-color: #ffe7e3;
     background-size: cover;
     background-position: center;
     height: 540px;
@@ -14,7 +19,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(81,163,201, 0.6); 
+    /* background-color: rgb(81,163,201, 0.6);  */
     /* Adjust the alpha (last value) for transparency  rgb(81,163,201)  rgb(61,148,192, 0.6); rgba(109, 195, 238, 0.6)*/
     /* background-color: rgba(249, 201, 156, 0.6); */
     z-index: 1;
@@ -26,14 +31,15 @@
 }
 
 .title-5{
-    font-size: 17px;
+    font-size: 34px !important;
     font-weight: bold;
-    color: #F1C96D;
+    color: #484848;
 }
 
 .description-5{
-    font-size: 27px;
+    font-size: 34px;
     font-weight: bold;
+    color: #FF8B9E;
 }
 
 .article-card {
@@ -48,14 +54,13 @@
     height: 250px;
 }
 .article-title{
-    text-transform: uppercase;
     padding: 5px;
-    font-size: 22px;
+    font-size: 28px !important;
     color: black;
 }
 
 .article-description{
-    font-size: 14px;
+    font-size: 24px;
     color: #6E6E6E;
 }
 
@@ -69,10 +74,30 @@
     /* background-color: rgb(247, 255, 237); */
 }
 
-footer{
-    background-color: rgb(128, 191, 218);
-}
-
 .about{
     background-color: #F6F6F6;
+}
+
+h3{
+    font-family: Libre Baskerville;
+    font-weight: 400 !important;
+    font-size: 38.5px !important;
+    line-height: 45.3px !important;
+}
+
+p{
+    font-size: 20.5px;
+    color: #6E6E6E;
+}
+
+.services-header{
+    background-color: #ffe7e3;
+    font-family: Libre Baskerville;
+    font-weight: 400 !important;
+    font-size: 38.5px !important;
+    line-height: 45.3px !important;
+}
+
+.service{
+    border-top: 1px solid black;
 }
