--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,42 @@
+:root{
+    --color-primary: #FFE7E3;
+    --color-secondary: #6941c7;
+    --color-primary-hover: #5e31c6;
+    --color-black: #2a2a2a;
+    --color-white: #FFFFFF;
+    --color-lightYellow: #f6f2eb;
+    --color-lightBlue: #DBE7FF;
+    --color-gray: #626262;
+    --color-lightGray: #838787;
+    --color-light: #e8e8e8;
+}
+
 body {
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: start !important;
-    justify-content: center;
+    justify-content: space-between !important;
     width: 100vw;
     overflow-x: hidden;
     /* min-height: 600px; */
-    position: absolute;
+    position: relative;
     top: 0%;
+    bottom: 0%;
     padding: 0 !important;
+    border: 0;
 }
 /* html, body { height: 100%; } */
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; padding: 0%; font-family: Roboto, "Helvetica Neue", sans-serif; min-height: 100vh; }
+html{
+    /* height: 100vh; */
+    /* background-color:; */
+    padding: 0% !important;
+    margin: 0%;
+    position: relative;
+    display: flex;
+    align-items:space-between;
+}
 
 
 
