--- a/src/app/pages/blogs/blogs.component.html
+++ b/src/app/pages/blogs/blogs.component.html
@@ -8,5 +8,5 @@
             </button>
         </div>
     </div>
-    <app-list-blogs></app-list-blogs>
+    <app-list-blogs [blogs]="blogs" ></app-list-blogs>
 </div>
