--- a/src/app/components/list-articles/list-articles.component.css
+++ b/src/app/components/list-articles/list-articles.component.css
@@ -14,7 +14,7 @@
     background-color: #ffffff;
 } */
 .article-text{
-    background-color: #e2e0e0;
+    background-color: #ffe7e3;
     color: #5f5e5e;
 }
 .article-title{
