--- a/src/app/components/list-articles/list-articles.component.html
+++ b/src/app/components/list-articles/list-articles.component.html
@@ -10,5 +10,5 @@
         </div>
     </div>
 
-    <app-article-card class="col-md-12" *ngFor="let article of articles" [title]="article.title"></app-article-card>
+    <app-article-card class="col-md-12" *ngFor="let article of articles" [article]="article"></app-article-card>
 </div>
