--- a/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
+++ b/src/app/pages/femme/femme-dashboard/femme-dashboard.component.html
@@ -19,8 +19,8 @@
                         <div class="card-body">
                             <canvas id="myChart" class="w-100 h-100 canvas"></canvas>
                         </div>
-                        </div>   
-                </div>  
+                        </div>
+                </div>
                 <div class="col-md-6 pr-0">
                     <div class="card pr-0 w-100">
                         <div class="card-body">
@@ -34,9 +34,10 @@
                                 <canvas id="myChartPiePainWorses"></canvas>
                             </div>
                         </div>
-                    </div>    
+                    </div>
                 </div>
             </div>
-        </div>    
-    </div>   
+        </div>
+        <app-my-blog></app-my-blog>
+    </div>
 </body>
