--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -16,129 +16,120 @@ header {
     align-items: center;
     padding: 15px;
     color: black;
+  }
   
-    .brand {
-      a {
-        color: black;
-        text-decoration: none;
-        font-size: 1.5em;
-      }
+  .navbar .brand a {
+    color: black;
+    text-decoration: none;
+    font-size: 1.5em;
+  }
+  
+  .navbar .pc-links a.active {
+    position: relative;
+    height: 100%;
+  }
+  
+  .navbar .pc-links a.active::after {
+    color: black !important;
+    content: '';
+    position: absolute;
+    bottom: -2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 4px;
+    background-color: #FF8B9E;
+  }
+  
+  .navbar .menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+  }
+  
+  .navbar .menu .bar {
+    height: 3px;
+    width: 25px;
+    margin: 5px 0;
+    transition: transform 0.3s ease-in-out;
+    background-color: #ffffff;
+  }
+  
+  .navbar nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+  }
+  
+  .navbar nav ul li {
+    margin-right: 15px;
+  }
+  
+  .navbar nav ul li a {
+    color: rgb(91, 90, 90);
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 16px !important;
+    font-family: Lato, sans-serif;
+    text-transform: uppercase;
+    margin-right: 30px;
+  }
+  
+  .navbar .menu-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .navbar .menu-container ul {
+    flex-direction: column;
+  }
+  
+  .navbar .menu-container ul li {
+    margin-right: 0;
+    padding: 15px;
+  }
+  
+  .navbar .menu-container ul li a {
+    color: black;
+    text-decoration: none;
+  }
+  
+  .navbar .btn-login {
+    background-color: #FF8B9E;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: 0;
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+    color: #ffffff;
+  }
+  
+  @media (max-width: 768px) {
+    .navbar .pc-links {
+      display: none !important;
     }
-    
-    .pc-links a.active{
+  
+    .navbar .menu {
+      display: flex !important;
+      transform: rotate(0deg);
       position: relative;
-      height: 100%;
-    }
-    .pc-links a.active::after{
-        color: black !important;
-        content: '';
-        position: absolute;
-        bottom: -2rem;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        /* Adjust the width of the line */
-        height: 4px;
-        /* Adjust the height of the line */
-        background-color: #FF8B9E;
-        /* Line color */
+      z-index: 10;
     }
   
-    .menu {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-  
-      .bar {
-        /* background-color: rgb(17, 17, 17); */
-        height: 3px;
-        width: 25px;
-        margin: 5px 0;
-        transition: transform 0.3s ease-in-out;
-        background-color: #ffffff;
-      }
-    }
-  
-    nav {
-      ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-  
-        li {
-          margin-right: 15px;
-  
-          a {
-            color: rgb(91, 90, 90);
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 16px !important;
-            font-family: Lato, sans-serif ;
-            text-transform: uppercase;
-            margin-right: 30px;
-          }
-        }
-      }
-    }
-  
-    .menu-container {
-      display: flex;
-      flex-direction: column;
+    .navbar .menu-container {
+      transform: translateY(0);
       position: absolute;
-      top: 60px;
-      left: 0;
-      width: 100%;
-      /* background-color: #333; */
-      transform: translateY(-100%);
-      transition: transform 0.3s ease-in-out;
-  
-      ul {
-        flex-direction: column;
-  
-        li {
-          margin-right: 0;
-          padding: 15px;
-  
-          a {
-            color: black;
-            text-decoration: none;
-          }
-        }
-      }
-    }
-
-    .btn-login{
-      background-color: #FF8B9E;
-      /* color: #ffffff; */
-      font-weight: bold;
-      text-transform: uppercase;
-      border: 0;
-      padding-left: 30px !important;
-      padding-right: 30px !important;
-      color: #ffffff;
-    }
-  
-    @media (max-width: 768px) {
-        .pc-links{
-            display: none !important;
-        }
-      .menu {
-        display: flex !important;
-        transform: rotate(0deg);
-        position: relative;
-        z-index: 10;
-        /* background-color: aqua; */
-      }
-  
-      .menu-container {
-        transform: translateY(0);
-        position: absolute;
-        z-index: 100;
-      }
+      z-index: 100;
     }
   }
-
+  
 
   .language-selector {
     margin-left: 10px; /* Adjust margin as needed */
@@ -153,7 +144,7 @@ header {
     /* background-color: rgb(226, 138, 138); */
     color: black;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     min-width: 50px;
     gap: 0px;
     margin: 0px;
